...
        self.retryAction = retryAction
    }
    
    func body(content: Content) -> some View {
        content
            .alert("Error", isPresented: .constant(error != nil)) {
                Button("OK") {
                    error = nil
                }
                
                if let retryAction = retryAction {
                    Button("Retry") {
                        error = nil
...
